--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend assignment infobip",
+  "name": "frontend-assignment-infobip",
   "version": "1.0.0",
   "description": "A Frontend Assignment for infobip selection process",
   "main": "index.js",
